# reinforceRes

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yyzhu/reinforceres/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/FAInHook/: CMakeLists.txt  README.md  main.cpp
app/src/main/cpp/FAInHook/instruction/: Arm64Instruction.cpp  ArmInstruction.cpp  ArmInstruction.h  ThumbInstruction.cpp  ThumbInstruction.h
app/src/main/cpp/native-lib/: Asset.cpp  Asset.h  CMakeLists.txt  FileMap.cpp  FileMap.h  MyZipEntry.h  androiddef.h  jnitools.cpp  jnitools.h  mylog.h  native-lib.cpp  native-lib.h
app/src/main/java/com/yyzhu/reinforceres/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yyzhu/reinforceres/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
